--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AravindApp6">
         <activity
+            android:name=".activites.TabExample2Activity"
+            android:exported="false" />
+        <activity
             android:name=".activites.TabExample1Activity"
             android:exported="false" />
         <activity
@@ -19,7 +22,7 @@
             android:name=".activites.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.TabExample2Activity"
+            android:name=".activites.SliderActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
